Show whenever a build runs tests in the name (#3796)
* Show whenever a build runs tests in the name

* Too many forward slashes, use 'and' instead

* Try with / as the separator

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   compile-mudlet:
-    name: ${{matrix.os}}
+    name: ${{matrix.buildname}}
     runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
@@ -15,9 +15,11 @@ jobs:
           # - os: windows-latest
           #   triplet: x64-windows
           - os: ubuntu-latest
+            buildname: 'ubuntu'
             triplet: x64-linux
             compiler: gcc_64
           - os: macos-latest
+            buildname: 'macos / C++ tests'
             triplet: x64-osx
             compiler: clang_64
     env:
