MXP to MSP Tags (#4015)
* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* test/CMakeLists.txt update

* test/CMakeLists.txt update backout

* test/CMakeLists.txt update

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -102,10 +102,12 @@ set(mudlet_SRCS
     TMxpEntityTagHandler.cpp
     TMxpFontTagHandler.cpp
     TMxpLinkTagHandler.cpp
+    TMxpMusicTagHandler.cpp
     TMxpNodeBuilder.cpp
     TMxpMudlet.cpp
     TMxpProcessor.cpp
     TMxpSendTagHandler.cpp
+    TMxpSoundTagHandler.cpp
     TMxpSupportTagHandler.cpp
     MxpTag.cpp
     TMxpTagHandler.cpp
@@ -230,6 +232,8 @@ set(mudlet_HDRS
     TMxpEntityTagHandler.h
     TMxpFontTagHandler.h
     TMxpLinkTagHandler.h
+    TMxpMusicTagHandler.h
+    TMxpSoundTagHandler.h
     TMxpElementDefinitionHandler.h
     TMxpElementRegistry.h
     TMxpContext.h
