--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 // For format details, see https://aka.ms/vscode-remote/devcontainer.json or this file's README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.134.0/containers/cpp
+// Complemented with https://github.com/microsoft/vscode-dev-containers/blob/master/script-library/docs/desktop-lite.md#usage
 {
 	"name": "C++",
 	"build": {
@@ -7,7 +8,7 @@
 		// Update 'VARIANT' to pick an Debian OS version: buster, stretch
 		"args": { "VARIANT": "buster" }
 	},
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined"],
+	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined", "--init" ],
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
@@ -20,12 +21,13 @@
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [5900, 5901, 6080],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "gcc -v",
 
 	// Comment out this line to run as root instead.
-	"remoteUser": "vscode"
+	"remoteUser": "vscode",
 
+	"overrideCommand": false
 }
