Split off a TMainConsole subclass (#4149)
* Intorduce a separate TMainConsole type

The plan is to move various main-console-only fields to it.

* Move sub-console selection mappings to TMainConsole

This implies also moving all functions which access them.

I have not sorted any of them yet because many will vanish once
TLuaInterpreter is reorganized.

* Move spelling support to main console

* Move logging to main console

* CodeFactor warning

* Move main console code to TMainConsole.h / TMainConsole.cpp

* Zapping dup function

* Zapping rogue space

* unnecessary include

* Unnecessary commit to trigger Travis

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,6 +92,7 @@ set(mudlet_SRCS
     TLinkStore.cpp
     TLuaInterpreter.cpp
     TMap.cpp
+    TMainConsole.cpp
     TMedia.cpp
     TMxpElementDefinitionHandler.cpp
     TMxpElementRegistry.cpp
@@ -222,6 +223,7 @@ set(mudlet_HDRS
     TLabel.h
     TLinkStore.h
     TLuaInterpreter.h
+    TMainConsole.h
     TMap.h
     TMatchState.h
     TMedia.h
