Revise: improve Windows .ico (multi-image icon files) (#4089)
The "dev" one needed some reworking to avoid some clipping and I found the
GIMP script to generate a new one given a 256x256 starting image I applied
the same script to produce new files (with more different images sizes and
formats) for the other two as well.

import high resolution .PNGs from artwork repository:
They have been rebuilt from separately extracted elements from the original
SVG file and then stored at 1024x1024 resolution in a GIMP XCF file in
the mudlet/artwork repository. Have pulled them into this repo so they
can be used to make replacement Windows ICO icon files that are stored in
the ./src/icons sub-directory.

They might be needed for other really high definition icons and suchlike as
well.

Revise by changing some image save parameters to reduce file size:
I had selected some non-optimum (max compression, interlacing) options
that could be fixed without compromising anything.

Replace/upgrade mudlet Windows .ico icon file as well.

Signed-off-by: Stephen Lyons <slysven@virginmedia.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,7 +30,13 @@ if(USE_FONTS)
 endif()
 
 if(WIN32)
-  list(APPEND mudlet_RCCS icons/mudlet_main_512x512_6XS_icon.ico)
+  if(BUILD matches "-ptb.+")
+    list(APPEND mudlet_RCCS icons/mudlet_ptb.ico)
+  elseif((BUILD matches "-dev.+") or (BUILD matches "-test.+"))
+    list(APPEND mudlet_RCCS icons/mudlet_dev.ico)
+  else()
+    list(APPEND mudlet_RCCS icons/mudlet.ico)
+  endif()
 endif()
 
 set(mudlet_SRCS
