Migrate from ActionsPanel to Github (#4210)
* Migrate from AcionsPanel to Github

* Fix yaml

* Fix 3rd party yaml

--- a/.github/workflows/update-autocompletion.yml
+++ b/.github/workflows/update-autocompletion.yml
@@ -1,9 +1,7 @@
 name: Update autocompletion in Mudlet
 
 on:
-  repository_dispatch:
-    types: update-autocompletion
-
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * fri'
 
