--- a/.github/workflows/update-3rdparty.yml
+++ b/.github/workflows/update-3rdparty.yml
@@ -1,8 +1,7 @@
 name: Update 3rdparty sources
-on:
-  repository_dispatch:
-    types: update-3rdparty
 
+on:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * fri'
 
