Build on push to development (#4318)

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -1,6 +1,8 @@
 name: Build Mudlet
 on:
-  - pull_request
+  push:
+    branches: [master, development]
+  pull_request:
 
 jobs:
   compile-mudlet:
