Fix Windows PTBs to build again (#4326)
This reverts commit a3f2e2ff1eef54f03323c8ce537cea30bf302066.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,9 +31,9 @@ if(USE_FONTS)
 endif()
 
 if(WIN32)
-  if(APP_BUILD MATCHES "^-ptb.+")
+  if(BUILD matches "-ptb.+")
     list(APPEND mudlet_RCCS icons/mudlet_ptb.ico)
-  elseif((APP_BUILD MATCHES "^-dev.+") OR (APP_BUILD MATCHES "^-test.+"))
+  elseif((BUILD matches "-dev.+") or (BUILD matches "-test.+"))
     list(APPEND mudlet_RCCS icons/mudlet_dev.ico)
   else()
     list(APPEND mudlet_RCCS icons/mudlet.ico)
@@ -77,7 +77,6 @@ set(mudlet_SRCS
     LuaInterface.cpp
     main.cpp
     mudlet.cpp
-    MxpTag.cpp
     ScriptUnit.cpp
     T2DMap.cpp
     TAction.cpp
@@ -118,6 +117,7 @@ set(mudlet_SRCS
     TMxpSendTagHandler.cpp
     TMxpSoundTagHandler.cpp
     TMxpSupportTagHandler.cpp
+    MxpTag.cpp
     TMxpTagHandler.cpp
     TMxpTagParser.cpp
     TMxpTagProcessor.cpp
@@ -204,7 +204,6 @@ set(mudlet_HDRS
     KeyUnit.h
     LuaInterface.h
     mudlet.h
-    MxpTag.h
     post_guard.h
     pre_guard.h
     ScriptUnit.h
@@ -252,6 +251,7 @@ set(mudlet_HDRS
     TMxpNodeBuilder.h
     TMxpProcessor.h
     TMxpSendTagHandler.h
+    MxpTag.h
     TMxpTagHandler.h
     TMxpTagParser.h
     TMxpTagProcessor.h
