Update: libcommuni to 3.6.0 (#4303)
Pull in the updated files from upstream. Note that upstream does not
provide a CMake project file so it is not currently possible to import the
whole libcommuni as a git submodule. As such this does not currently work
for the CMake case as it is necessary to have either `IRC_STATIC` or
`IRC_SHARED` defined but I have not established how to do that for that
library.

A tweak was needed for some CMakeLists.txt entries for libcommuni:
effectively adds a missing `include/IrcCore/irccore_p.h` from the list of
headers - so it shows up in Qt Creator listing.

Adjusted a define for the compilation of libcommuni library: having
tried `PRIVATE` and `INTERFACE` settings determine that it is
necessary to use `PUBLIC` for the definition of `IRC_STATIC` in the CMake
project file we (created and) use for libcommuni.

Update libcommuni date of Copyright details

Signed-off-by: Stephen Lyons <slysven@virginmedia.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -376,6 +376,9 @@ if(USE_OWN_QT5KEYCHAIN)
     target_compile_definitions(mudlet PRIVATE INCLUDE_OWN_QT5_KEYCHAIN QTKEYCHAIN_NO_EXPORT)
 endif()
 
+# One of IRC_STATIC or IRC_SHARED must be defined for the communi IRC library
+target_compile_definitions(communi PUBLIC IRC_STATIC)
+
 target_link_libraries(
   mudlet
   communi
