Update Sparkle to latest release (#4359)
* Update Sparkle

* Update Sparkle to latest 1.24

--- a/3rdparty/cocoapods/Podfile
+++ b/3rdparty/cocoapods/Podfile
@@ -4,5 +4,6 @@ platform :osx, '10.7'
 project 'Empty'
 
 target 'Empty' do
-	pod 'Sparkle', '~> 1.18'
+	use_frameworks!
+	pod 'Sparkle', '~> 1.24'
 end
