Add Linux snapshot packaging to Github Actions (#4446)
* Plug in release validation

* Add pcregrep to list of installed packages

* Negate tag check correctly for Github

* Fix install line

* Port set-build-info to Actions

* Pass GITHUB_SHA as a variable

* Check for variable existence correctly

* Debug parsing build commit info

* Debug getting build commits more

* Correct check for building with Actions

* Fix bash syntax in retrieving build commit

* Try another syntax for pcregrep

* Pull out PR_NUMBER in another way

* Remove refs/ from PR number

* Check for Github variable correctly

* Fix check for macos

* Pull out Mudlet version in github builds

* Try a macOS-compatible way of checking if var exists

* Cleanup

* Ignore compiled cmake file

* Plug in after-build packaging

* Fix up more packaging

* First draft of snapshot packages

* Fix repository check

* Switch to branch of installers

* Show vcpkg folder

* Install tree first

* Add LS in

* Try find instead

* Add Lua to PATH

* Install dependencies

* Install Luarocks via apt

* Clarify dependency philosophy

* Install yajl last

* Set YAJL_LIBDIR

* Add sqlite to dependencies

* Install sqlite

* Install sqlite3

* Install YAJL first & point to sqlite3 dir

* Try parent of yajl

* Revert "Try parent of yajl"

This reverts commit 591e39f75b8a55b5d789109cfdc0ae6e00b31b14.

* Try parent yajl directory

* Set YAJL_INCDIR as instructed

* Print include dir

* Install tree first

* Pass in LUA_INCDIR as well

* Pass libdir

* Pass all yajl variables in one ago

* Find where libyajl is installed

* Update to latest vcpkg

* Workaround dodgy yajl build

* Workaround in debug build as well

* Revert "Update to latest vcpkg"

This reverts commit e2b1a04dd55e77c3ce79b889cab66f387d7dead2.

* Show the final /lib dir

* Find all cases of yajl

* Pass in LIBRARY_PATH

* Set LIBRARY_PATH anothe

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -13,11 +13,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          # oldest OS supported for maximum compatibility of built AppImage
+          - os: ubuntu-16.04
             buildname: 'ubuntu / gcc'
             triplet: x64-linux
             compiler: gcc_64
             qt: '5.14.1'
+            deploy: 'deploy'
           - os: ubuntu-latest
             buildname: 'ubuntu / clang'
             triplet: x64-linux
@@ -33,11 +35,13 @@ jobs:
             triplet: x64-osx
             compiler: clang_64
             qt: '5.14.1'
+            deploy: 'deploy'
           - os: windows-2019
             buildname: 'windows'
             triplet: x64-mingw-dynamic
             # compiler: flag not used in windows pipeline
             qt: '5.14.1'
+            deploy: 'deploy'
 
     steps:
     - name: Restore Qt cache
@@ -85,10 +89,15 @@ jobs:
     - name: (Linux) Install non-vcpkg dependencies
       if: runner.os == 'Linux'
       run: |
-        # Installing packages might fail as the github image becomes outdated
-        sudo apt update
-        # These aren't available or don't work well in vcpkg
-        sudo apt install ccache pkg-config libzip-dev libglu1-mesa-dev libpulse-dev
+        # Install from vcpkg everything we can for cross-platform consistency
+        # If not available, use other methods
+        sudo apt-get install ccache pkg-config pcregrep luarocks libzip-dev libglu1-mesa-dev libpulse-dev -y
+
+        # multiple versions of GCC available in Actions - update to latest
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 9
+        sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 9
+        sudo update-alternatives --set gcc /usr/bin/gcc-9
+        sudo update-alternatives --set g++ /usr/bin/g++-9
 
         echo "CCACHE_DIR=${{runner.workspace}}/ccache" >> $GITHUB_ENV
 
@@ -137,6 +146,12 @@ jobs:
         restore-keys: ccache-${{matrix.os}}-${{matrix.compiler}}-${{matrix.qt}}-
       if: matrix.os != 'windows-latest'
 
+    - name: (Linux/macOS) Set build info
+      if: runner.os == 'Linux' || runner.os == 'macOS'
+      run: |
+        ${{github.workspace}}/CI/travis.validate_deployment.sh
+        ${{github.workspace}}/CI/travis.set-build-info.sh
+
     - name: Build Mudlet
       uses: lukka/run-cmake@v3
       with:
@@ -156,6 +171,53 @@ jobs:
       if: runner.os == 'macOS'
       working-directory: '${{runner.workspace}}/b/ninja'
       run: ctest --output-on-failure
+
+    - name: (Linux/macOS) restore Luarocks for packaging
+      uses: actions/cache@v2
+      with:
+        path: $HOME/.luarocks
+        key: ccache-${{matrix.os}}-${{matrix.compiler}}-${{hashFiles('.github/workflows/build-mudlet.yml')}}
+        restore-keys: ccache-${{matrix.os}}-${{matrix.compiler}}-
+      if: runner.os == 'Linux' || runner.os == 'macOS'
+
+    - name: (Linux) package Mudlet
+      if: runner.os == 'Linux' && matrix.deploy == 'deploy'
+      run: |
+        export PATH="${{env.VCPKG_ROOT}}/installed/x64-linux/tools/lua:$PATH"
+
+        luarocks install --local LuaFileSystem
+        luarocks install --local luautf8
+        luarocks install --local lua-zip
+        luarocks install --local LuaSQL-SQLite3 SQLITE_INCDIR="${{env.VCPKG_ROOT}}/installed/x64-linux/include"
+        luarocks install --local lrexlib-pcre
+
+        # workaround https://github.com/lloyd/yajl/issues/209
+        mv ${{env.VCPKG_ROOT}}/installed/x64-linux/lib/libyajl_s.a ${{env.VCPKG_ROOT}}/installed/x64-linux/lib/libyajl.a
+        mv ${{env.VCPKG_ROOT}}/installed/x64-linux/debug/lib/libyajl_s.a ${{env.VCPKG_ROOT}}/installed/x64-linux/debug/lib/libyajl.a
+        # Rock locations search is hardcoded to -L/usr/local/lib and not adjustable
+        export LIBRARY_PATH="${{env.VCPKG_ROOT}}/installed/x64-linux/lib:$LIBRARY_PATH"
+        # LUA_INCDIR needs to be passed as well due to https://github.com/luarocks/luarocks/issues/1239
+        luarocks install --local lua-yajl YAJL_INCDIR="${{env.VCPKG_ROOT}}/installed/x64-linux/include"         YAJL_LIBDIR="${{env.VCPKG_ROOT}}/installed/x64-linux/lib" LUA_INCDIR="${{env.VCPKG_ROOT}}/installed/x64-linux/include"
+
+        # CI changelog generation dependencies
+        luarocks install --local argparse
+        luarocks install --local lunajson
+
+        # necessary for Qt multimedia
+        sudo apt-get install libgstreamer-plugins-base1.0-0 -y
+
+        ${{github.workspace}}/CI/travis.after_success.sh
+      env:
+        BUILD_FOLDER: ${{runner.workspace}}/b/ninja
+        RUNNER_OS: ${{runner.os}}
+        DEPLOY: ${{matrix.deploy}}
+
+    - name: Upload packaged Mudlet
+      uses: actions/upload-artifact@v2
+      if: env.FOLDER_TO_UPLOAD
+      with:
+        name: ${{env.UPLOAD_FILENAME}}
+        path: ${{env.FOLDER_TO_UPLOAD}}
 
     - name: (windows) Show relevant logs logs
       if: failure() && runner.os == 'Windows'
