--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ mudlet
 
 # ignore macOS apps in general, but keep the Autoupdater from Sparkle
 !3rdparty/sparkle/Sparkle.framework/Versions/A/Resources/Autoupdate.app
+
 translations/translated/lrelease_output.txt
 translations/translated/translation-stats.json
+CMakeLists.txt.user
