Stop ALT presses from stealing focus (#4512)
* take on alt focus menu bar disable

* correct key_alt case

* add altfocusmenudisable style

* code clean up
put AltFocusMenuBarDisable object creation into Host and make it preference dependant

* make constructor explicit

* correct access to preferences of current profile

* flip condition to be correct

* revert change in TCommandLine

* revert change in dlgProfilePreferences.cpp

* remove alt focus title bar disable preference - just disable it completely

* add new files to mudlet.pro and correct order in CMakeList

* restore parenthesis

Co-authored-by: Piotr Wilczynski <piotr.wilczynski@bisnode.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,7 @@ endif()
 set(mudlet_SRCS
     ActionUnit.cpp
     AliasUnit.cpp
+    AltFocusMenuBarDisable.cpp
     ctelnet.cpp
     discord.cpp
     dlgAboutDialog.cpp
@@ -173,6 +174,7 @@ set(mudlet_UIS
 set(mudlet_HDRS
     ActionUnit.h
     AliasUnit.h
+    AltFocusMenuBarDisable.h
     ctelnet.h
     discord.h
     dlgAboutDialog.h
