Add way to color room characters (#4573)
* add way to color room characters

* accept new translations

* fix qmake build

* addSymbolToPixmapCache improve

* cr corrections

* Modernize design

* remove accidental hints

* remove not needed variable

* minor fixes

* room not exists will not throw error in room char color functions

* remove properties with auto suggestion

* remove not neede assignment

* prevent spawning multiple symbol char dialogs at once

* fix room symbol selection issues

Co-authored-by: Piotr Wilczynski <piotr.wilczynski@bisnode.com>
Co-authored-by: Vadim Peretokin <vperetokin@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -61,6 +61,7 @@ set(mudlet_SRCS
     dlgPackageExporter.cpp
     dlgProfilePreferences.cpp
     dlgRoomExits.cpp
+    dlgRoomSymbol.cpp
     dlgScriptsMainArea.cpp
     dlgSourceEditorArea.cpp
     dlgSourceEditorFindArea.cpp
@@ -161,6 +162,7 @@ set(mudlet_UIS
     ui/notes_editor.ui
     ui/profile_preferences.ui
     ui/room_exits.ui
+    ui/room_symbol.ui
     ui/scripts_main_area.ui
     ui/source_editor_area.ui
     ui/source_editor_find_area.ui
@@ -190,6 +192,7 @@ set(mudlet_HDRS
     dlgPackageExporter.h
     dlgProfilePreferences.h
     dlgRoomExits.h
+    dlgRoomSymbol.h
     dlgScriptsMainArea.h
     dlgSourceEditorArea.h
     dlgSourceEditorFindArea.h
